--- a/GrillaUVAndroid/bin/AndroidManifest.xml
+++ b/GrillaUVAndroid/bin/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-
+	<uses-permission android:name="android.permission.INTERNET" /> 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,5 +23,6 @@
             </intent-filter>
         </activity>
     </application>
+    
 
 </manifest>
